fix monitoring page shift

--- a/FarmProject/client-app/src/App.css
+++ b/FarmProject/client-app/src/App.css
@@ -30,7 +30,7 @@
 }
 
 .middle-part{
-    height: 100vh;
+    height: 93vh;
     display: flex;
     background-color: var(--main-back-color)
 }
